# HoleyMonoid

./: .travis.yml  ContSt.hs  Format.cabal  Format.hs  HoleyMonoid.cabal  LICENSE  Makefile  ProjectHome.md  README.md
Data/: HoleyMonoid.hs
