Name:           HoleyMonoid
Version:        0.1
Synopsis:       Monoids with holes.
Description:   	The 'HoleyMonoid' allows building monoidal values of which certain components are to be filled in later. For example:
                .
                > > let holey = now "x = "
                >             . later show
                >             . now ", y = "
                >             . later show
                > > run holey 3 5
                > "x = 3, y = 5"

Cabal-Version:  >= 1.2
License:        BSD3
License-file:   LICENSE
Category:       Text
Build-type:     Simple

Library
  Exposed-Modules:  HoleyMonoid
  Build-Depends:    base >= 4, base < 5
